--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&family=Ubuntu:wght@400;500;700&display=swap");
+
+:root {
+  --marine-blue: hsl(213, 96%, 18%);
+  --light-gray: hsl(229, 24%, 87%);
+  --cool-gray: hsl(231, 11%, 63%);
+  --purplish-blue: hsl(243, 100%, 62%);
+  --light-gray: hsl(229, 24%, 87%);
+}
+
 *,
 *::before,
 *::after {
@@ -15,6 +25,9 @@
 }
 
 html {
+  font-family: "Barlow Semi Condensed", sans-serif;
+  font-family: "Ubuntu", sans-serif;
+  background: var(--light-gray);
 }
 
 body {
