--- a/src/app/multi-step-form/multi-step-form.component.css
+++ b/src/app/multi-step-form/multi-step-form.component.css
@@ -115,6 +115,35 @@
   color: var(--cool-gray);
 }
 
+.Step-2__switch {
+  background: var(--marine-blue);
+  width: 3rem;
+  height: 1.5rem;
+  padding: 0.3rem;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.Step-2__switch-slider {
+  height: 1rem;
+  width: 1rem;
+  background: white;
+  border-radius: 100%;
+  transition: all 0.5s;
+}
+
+.Step-2__switch-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  background: var(--light-gray);
+  padding: 0.75rem;
+  border-radius: 0.25rem;
+  align-items: center;
+  font-weight: 500;
+}
+
 /* Step 3 */
 
 .Step-3 {
