--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
   --cool-gray: hsl(231, 11%, 63%);
   --purplish-blue: hsl(243, 100%, 62%);
   --light-gray: hsl(229, 24%, 87%);
+  --pastel-blue: hsl(206, 80%, 96%);
 }
 
 *,
