figure out radio buttons

--- a/src/app/multi-step-form/multi-step-form.component.html
+++ b/src/app/multi-step-form/multi-step-form.component.html
@@ -74,6 +74,7 @@
         </p>
       </div>
     </div>
+    <input type="radio" name="plan" id="arcade" formControlName="arcade" />
     <div
       class="Step-2__button"
       (click)="setPlan(1)"
@@ -98,6 +99,7 @@
         </p>
       </div>
     </div>
+    <input type="radio" name="plan" id="advanced" formControlName="advanced" />
     <div
       class="Step-2__button"
       (click)="setPlan(2)"
@@ -122,6 +124,7 @@
         </p>
       </div>
     </div>
+    <input type="radio" name="plan" id="pro" formControlName="pro" />
     <section class="Step-2__switch-wrapper">
       <p
         [ngStyle]="{
